Fix: Inteligencia de rutas en DataStore y limpieza de imports

--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
 GEMINI_API_KEY=AIzaSyCsmR4c__l5oSTD5A4g6SZ9O3-LOwL0Swg
-DATA_REPO_DIR=C:\Users\Francisco\Documents\Observatorio-Politico/REPO_V40_HISTORIAL_COMPLETO_V2
-KOM_DIR=C:\Users\Francisco\Documents\Observatorio-Politico/KOM
-
-
+DATA_REPO_DIR=REPO_V40_HISTORIAL_COMPLETO_V2
+KOM_DIR=KOM
