--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/index.py" },
-    { "source": "/((?!api/).*)", "destination": "/public/$1" }
+    { 
+      "source": "/api/(.*)", 
+      "destination": "/api/index.py" 
+    },
+    { 
+      "source": "/(.*)", 
+      "destination": "/public/$1" 
+    }
   ]
 }
